# shakal-converter

./: .gitignore  .gitmodules  CMakeLists.txt  ImageDecoder.cpp  ImageDecoder.hpp  anton.hpp  main.cpp
